Fix for Page heading on mobile view.

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,6 @@
+.page-title{
 
- .page-title{
-
-    padding: 10px;
+    padding: 5px;
     text-align: center;
   }
 .unit-list {
